--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/linux,emacs,python
-# Edit at https://www.gitignore.io/?templates=linux,emacs,python
+# Created by https://www.gitignore.io/api/linux,emacs,python,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=linux,emacs,python,visualstudiocode
 
 ### Emacs ###
 # -*- mode: gitignore; -*-
@@ -171,4 +171,15 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# End of https://www.gitignore.io/api/linux,emacs,python
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
+# End of https://www.gitignore.io/api/linux,emacs,python,visualstudiocode
