--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,4 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/linux,emacs,python,visualstudiocode
 .vscode/settings.json
+db_project.code-workspace
