--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,4 @@ dmypy.json
 # End of https://www.gitignore.io/api/linux,emacs,python,visualstudiocode
 .vscode/settings.json
 db_project.code-workspace
+.vscode/launch.json
