--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,10 @@
-appdirs==1.4.3
-astroid==2.3.3
-attrs==19.3.0
-black==19.10b0
-certifi==2020.4.5.1
-Click==7.0
-Flask==1.1.1
+click==7.1.1
+Flask==1.1.2
 Flask-Cors==3.0.8
 gunicorn==20.0.4
-isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.11.1
-lazy-object-proxy==1.4.3
+Jinja2==2.11.2
 MarkupSafe==1.1.1
-mccabe==0.6.1
-mkl-fft==1.0.15
-mkl-random==1.1.0
-mkl-service==2.3.0
-mypy-extensions==0.4.3
-numpy==1.18.1
-pathspec==0.7.0
-psycopg2==2.8.4
-pylint==2.4.4
-regex==2020.2.20
+psycopg2-binary==2.8.5
 six==1.14.0
-toml==0.10.0
-typed-ast==1.4.1
-typing-extensions==3.7.4.1
-Werkzeug==1.0.0
-wrapt==1.11.2
+Werkzeug==1.0.1
